force-app/main/default/objects/Reward_Profile__c/Reward_Profile__c.object-meta.xml
<CustomObject>
    <label>Reward Profile</label>
    <nameField>
        <label>Reward Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reward Profiles</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>