force-app/main/default/objects/Reward_Profile__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Business Account or Person Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reward Profiles</relationshipLabel>
    <relationshipName>Reward_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>