force-app/main/default/objects/Reward_Profile__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Only set this value for Individual-typed profile</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reward Profiles</relationshipLabel>
    <relationshipName>Reward_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>