force-app/main/default/objects/Reward_Profile__c/fields/Total_Credit__c.field-meta.xml
<CustomField>
    <fullName>Total_Credit__c</fullName>
    <inlineHelpText>Total Credit Awarded</inlineHelpText>
    <label>Total Credit</label>
    <summarizedField>Reward__c.Credit__c</summarizedField>
    <summaryForeignKey>Reward__c.Reward_Profile__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>