force-app/main/default/objects/Reward_Profile__c/fields/Total_Remainder__c.field-meta.xml
<CustomField>
    <fullName>Total_Remainder__c</fullName>
    <inlineHelpText>Total Credit Leftover</inlineHelpText>
    <label>Total Remainder</label>
    <summarizedField>Reward__c.Remainder__c</summarizedField>
    <summaryForeignKey>Reward__c.Reward_Profile__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>