force-app/main/default/objects/Reward_Profile__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service Package</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Boutique</fullName>
            </value>
            <value>
                <fullName>Birthday Voucher</fullName>
            </value>
            <value>
                <fullName>Grooming Package</fullName>
            </value>
            <value>
                <fullName>Service Credit Voucher</fullName>
            </value>
            <value>
                <fullName>CMP</fullName>
            </value>
            <value>
                <fullName>Discount Voucher</fullName>
            </value>
            <value>
                <fullName>Service Credit</fullName>
            </value>
            <value>
                <fullName>Accessories Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>