force-app/main/default/objects/Reward_Profile__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <description>For Non-Fleet : Record Type ID +&apos;_&apos;+ Contact ID +&apos;_&apos;+ Brand +&apos;_&apos;+ Reward Type
For Fleet : Record Type ID +&apos;_&apos;+ Registered Vehicle ID + &apos;_&apos;+ Brand +&apos;_&apos;+ Reward Type</description>
    <inlineHelpText>For Non-Fleet : 
Record Type ID +&apos;_&apos;+ Contact ID +&apos;_&apos;+ Brand +&apos;_&apos;+ Reward Type

For Fleet : 
Record Type ID +&apos;_&apos;+ Registered Vehicle ID + &apos;_&apos;+ Brand +&apos;_&apos;+ Reward Type</inlineHelpText>
    <label>Unique Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>