force-app/main/default/objects/Reward_Profile__c/recordTypes/Fleet.recordType-meta.xml
<RecordType>
    <fullName>Fleet</fullName>
    <active>true</active>
    <description>Business Account (Staff, Leasing), Person Account</description>
    <label>C&amp;C Fleet</label>
</RecordType>