force-app/main/default/objects/Reward_Profile__c/recordTypes/Individual.recordType-meta.xml
<RecordType>
    <fullName>Individual</fullName>
    <active>true</active>
    <description>Business Account (Fleet)</description>
    <label>C&amp;C Individual</label>
</RecordType>