force-app/main/default/objects/Reward_Profile__c/listViews/All_C_C_Fleet_Reward_Profile.listView-meta.xml
<ListView>
    <fullName>All_C_C_Fleet_Reward_Profile</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Registered_Vehicle__c</columns>
    <columns>Branch__c</columns>
    <columns>Brand__c</columns>
    <columns>Type__c</columns>
    <columns>Total_Credit__c</columns>
    <columns>Total_Debited_Usage__c</columns>
    <columns>Total_Credited_Usage__c</columns>
    <columns>Total_Remainder__c</columns>
    <columns>Unique_Key__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Reward_Profile__c.Fleet</value>
    </filters>
    <label>All C&amp;C Fleet Reward Profile</label>
</ListView>