force-app/main/default/objects/Reward_Profile__c/listViews/Created_Today.listView-meta.xml
<ListView>
    <fullName>Created_Today</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Registered_Vehicle__c</columns>
    <columns>Brand__c</columns>
    <columns>Type__c</columns>
    <columns>Total_Credit__c</columns>
    <columns>Total_Remainder__c</columns>
    <columns>Total_Debited_Usage__c</columns>
    <columns>Unique_Key__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Created Today</label>
</ListView>