force-app/main/default/objects/Reward_Profile__c/listViews/Reward_Profiles_MIT.listView-meta.xml
<ListView>
    <fullName>Reward_Profiles_MIT</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Registered_Vehicle__c</columns>
    <columns>Branch__c</columns>
    <columns>Brand__c</columns>
    <columns>Type__c</columns>
    <columns>Total_Credit__c</columns>
    <columns>Total_Debited_Usage__c</columns>
    <columns>Total_Credited_Usage__c</columns>
    <columns>Total_Remainder__c</columns>
    <columns>Unique_Key__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brand__c</field>
        <operation>equals</operation>
        <value>MIT</value>
    </filters>
    <label>Reward Profiles - MIT</label>
</ListView>